--- a/login.html
+++ b/login.html
@@ -11,6 +11,8 @@
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
+        background-color:#ABEF94;
+
       }
       #status {
         /* avoid an excessively wide status text */
