--- a/login.html
+++ b/login.html
@@ -40,8 +40,8 @@
     Password:<br>
     <input type="password" name="password">
     <br>
-    <a href="give_permit.html">
-    <input type="submit" value="Submit">
+    <a href="/give_permit.html">
+    <input id="login" type="submit" value="Submit">
     </a>
     </form>
   </body>
