--- a/login.html
+++ b/login.html
@@ -11,8 +11,7 @@
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
-        background-color:#ABEF94;
-
+        background-color:#2ba5fc;
       }
       #status {
         /* avoid an excessively wide status text */
@@ -20,6 +19,9 @@
         text-overflow: ellipsis;
         overflow: hidden;
         max-width: 400px;
+      }
+      #give_permission {
+        display:none;
       }
     </style>
 
@@ -29,21 +31,25 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="popup.js"></script>
+
   </head>
   <body>
+  <div id="login_page">
     <h2>Login to Empower</h2>
     <form>
-    User Name:<br>
+    User:<br>
     <input type="text" name="username">
     <br>
     Password:<br>
     <input type="password" name="password">
     <br>
-    <a href="/give_permit.html">
-    <input id="login" type="submit" value="Submit">
+    <a href="give_permit.html">
+    <button type="button" id="login">Log In</button>
     </a>
     </form>
+  </div>
+
+
   </body>
 </html>
 
