--- a/give_permit.html
+++ b/give_permit.html
@@ -32,6 +32,8 @@
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
     <script src="popup.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
   </head>
   <body>
   <h2>Give Permissions</h2>
