--- a/login.html
+++ b/login.html
@@ -31,8 +31,8 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
+     <script src="popup.js"></script>
+    <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
   </head>
   <body>
   <div id="login_page">
@@ -50,35 +50,7 @@
     </form>
   </div>
 
-  <script type="text/javascript">
-    Parse.initialize("TR0PpcB3RW3yejpUHTywnCtWHZ0M44wJTMH8mHMe", "7DBkXfxGDhsFsw29EACSBLlXlNnWomduRWj3YOoQ");
-    
-    $("login_page").login(function(event){
-    	event.preventDefault();
-    	var name = $("username").val();
-    	var pass = $("password", pass);
-    	user.signUp(null, {
-    		success: function(user){
-    			//
-    		}, erro: function(user, error){
-    			consol.log("signup error:"+error.message);
-    		}
-    	});
-    });
-    
-   //  var TestObject = Parse.Object.extend("TestObject");
-//     var testObject = new TestObject();
-    var User = Parse.Object.extend("TestObject");
-    var User = new TestObject();
-      testObject.save({foo: "cliff"}, {
-      success: function(object) {
-        $(".success").show();
-      },
-      error: function(model, error) {
-        $(".error").show();
-      }
-    });
-  </script>
+  
   </body>
 </html>
 
