javascript for login button works

--- a/give_permit.html
+++ b/give_permit.html
@@ -31,8 +31,8 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="popup.js"></script>
-    <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
+    <script src="give_permit_js.js"></script>
+    <script src="parse-1.2.13.min.js"></script>
   </head>
   <body>
   <h2>Give Permissions</h2>
