--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
      <script src="popup.js"></script>
-    <script src="parse-1.2.13.min.js"></script>
+    <script src="parse-1.6.7.min.js"></script>
   </head>
   <body>
   <div id="login_page">
@@ -44,7 +44,7 @@
     Password:<br>
     <input type="password" id="password">
     <br>
-    <a href="give_permit.html">
+    <!-- <a href="give_permit.html"> -->
     <button type="button" id="login">Log In</button>
     </a>
     </form>
