Added standin.html and fixed login.html

--- a/login.html
+++ b/login.html
@@ -44,9 +44,8 @@
     Password:<br>
     <input type="password" id="password">
     <br>
-    <!-- <a href="give_permit.html"> -->
     <button type="button" id="login">Log In</button>
-    </a>
+    <button type="button" id="signup">Sign Up</button>
     </form>
   </div>
 
