--- a/give_permit.html
+++ b/give_permit.html
@@ -38,25 +38,25 @@
   <h2>Give Permissions</h2>
   <div id="give_permission">
     Stand-In:<br>
-    <input type="text" name="standinname">
+    <input type="text" id="standinname">
     <br>
     Gmail:<br>
-    <input type="text" name="gmail">
+    <input type="text" id="gmail">
     <br>
     Password:<br>
-    <input type="password" name="gmailpass">
+    <input type="password" id="gmailpass">
     <br>
     Facebook<br>
-    <input type="text" name="fb">
+    <input type="text" id="fb">
     <br>
     Password:<br>
-    <input type="password" name="fbpass">
+    <input type="password" id="fbpass">
     <br>
     JetBlue<br>
-    <input type="text" name="jb">
+    <input type="text" id="jb">
     <br>
     Password<br>
-    <input type="password" name="jbpass">
+    <input type="password" id="jbpass">
     <br>
     Time Limit<br>
     <select>
