--- a/signup.html
+++ b/signup.html
@@ -1,9 +1,4 @@
 <!doctype html>
-<!--
- This page is shown when the extension button is clicked, because the
- "browser_action" field in manifest.json contains the "default_popup" key with
- value "popup.html".
- -->
 <html>
   <head>
     <title>Empower Popup</title>
@@ -20,9 +15,6 @@
         overflow: hidden;
         max-width: 400px;
       }
-      #give_permission {
-        display:none;
-      }
     </style>
 
     <!--
@@ -31,8 +23,8 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-     <script src="popup.js"></script>
-    <script src="parse-1.6.7.min.js"></script>
+      <script src="signup.js"></script>
+      <script src="parse-1.6.7.min.js"></script>
   </head>
   <body>
   <div id="login_page">
@@ -44,12 +36,9 @@
     Password:<br>
     <input type="password" id="password">
     <br>
-    <button type="button" id="login">Log In</button>
     <button type="button" id="signup">Sign Up</button>
     </form>
   </div>
-
-  
   </body>
 </html>
 
