added login permanently and logout functions

--- a/give_permit.html
+++ b/give_permit.html
@@ -85,6 +85,7 @@
     </select>
     <button type="button" id="cancel">Cancel</button>
     <button type="button" id="submit">Submit</button>
+    <button type="button" id="signout">Sign Out</button>
 </div>
 
 
