--- a/login.html
+++ b/login.html
@@ -31,7 +31,8 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-     <script src="popup.js"></script>
+
+     <script src="signup.js"></script>
     <script src="parse-1.6.7.min.js"></script>
   </head>
   <body>
