Changed names of standin to show_permit

--- a/show_permit.html
+++ b/show_permit.html
@@ -22,7 +22,7 @@
   </head>
   <body>
   <div id="standin_page">
-    <h2>Your Stand-in Virtual Assistant Permissions</h2>
+    <h2>Your Alias Permissions</h2>
 
     <!-- THIS SECTION NEEDS TO BE REPEATED FOR EVERY EXISTING PERMISSION -->
     <div id="permissions">
@@ -31,6 +31,7 @@
 
     <!-- END SECTION -->
     <button type="button" id="give_permission">Give Permissions</button>
+    <button type="button" id="use">Use Permissions</button>
   </div>
 
   
