Fixed time and cleaned up

--- a/show_permit.html
+++ b/show_permit.html
@@ -17,7 +17,7 @@
       }
     </style>
 
-    <script src="standin.js"></script>
+    <script src="show_permit.js"></script>
     <script src="parse-1.6.7.min.js"></script>
   </head>
   <body>
@@ -30,7 +30,7 @@
     </div>
 
     <!-- END SECTION -->
-    <button type="button" id="give_permission">Give Permissions</button>
+    <button type="button" id="give">Give Permissions</button>
     <button type="button" id="use">Use Permissions</button>
   </div>
 
