use permission function added

--- a/use_permit.html
+++ b/use_permit.html
@@ -33,7 +33,7 @@ user permissions page.
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-     <script src="action.js"></script>
+     <script src="use_permit.js"></script>
     <script src="parse-1.6.7.min.js"></script>
   </head>
   <body>
