--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     
     <script src="parse-1.6.7.min.js"></script>
-    <script src="popup.js"></script>
+    <script src="signup.js"></script>
   </head>
   
   <body>
@@ -39,9 +39,9 @@
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" style="border-radius: 5px; width: 240px;">
           </div> 
           <br/>
-          <a href="setup-integrations.html">
+
             <button type="button" id="login" class="btn btn-default btn-full-width" style="color: #fff; width:240px; margin:0px 10px; background-color: #DB357A; border-color: #DB357A; padding: 10px 12px;">Log In</button>
-          </a>
+
         </form>
         
       </row>
