--- a/give_permit.html
+++ b/give_permit.html
@@ -48,15 +48,15 @@
                 </div>
                 <div class="" style="padding-bottom: 25px;">
                   <label for="sel2" style="color: #fff;">What is your account username?</label>
-                  <input type="text" class="form-control" id="account_username" placeholder="example@gmail.com" onfocus="this.placeholder=''" onblur="this.placeholder='example@gmail.com'">
+                  <input type="text" class="form-control" id="account_username" placeholder="example@gmail.com">
                 </div>
                 <div class="" style="padding-bottom: 25px;">
                   <label for="sel3" style="color: #fff;">What is your account password?</label>
-                  <input type="text" class="form-control" id="account_password" placeholder="********" onfocus="this.placeholder=''" onblur="this.placeholder='********'">
+                  <input type="text" class="form-control" id="account_password" placeholder="********">
                 </div>
                 <div class="" style="padding-bottom: 25px;">
                   <label for="sel4" style="color: #fff;">To who?</label>
-                  <input type="text" class="form-control" id="alias" placeholder="Alias Username" onfocus="this.placeholder=''" onblur="this.placeholder='Alias Username'">
+                  <input type="text" class="form-control" id="alias" placeholder="Alias Username">
                 </div>
                 <div class="" style="padding-bottom: 50px;">
                   <label for="sel5" style="color: #fff;">For how long?</label>
@@ -73,11 +73,8 @@
             </row>
             
             <row>
-              <a href="show_permit.html">
-                <button class="btn" type="button" id="submit" style="margin-top: 10px; background-color: #DB357A; border-color: #DB357A; color: #fff;">Submit</button>
-              </a>
+              <button class="btn" type="button" id="submit" style="margin-top: 10px; background-color: #DB357A; border-color: #DB357A; color: #fff;">Submit</button>
               <button class="btn" type="button" id="cancel" style="margin-top: 10px; margin-left: 10px; background-color: transparent; border-color: #fff; color: #fff;">Cancel</button>
-              <button class="btn" type="button" id="signout" style="margin-top: 10px; margin-left: 10px; background-color: transparent; border-color: #fff; color: #fff;">Sign Out</button>
             </row>
        </row>
 
