--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     
     <script src="parse-1.6.7.min.js"></script>
-    <script src="signup.js"></script>
+    <script src="popup.js"></script>
   </head>
   
   <body>
