--- a/login.html
+++ b/login.html
@@ -33,14 +33,17 @@
         
         <form>
           <div class="input-group input-login-page">
-            <input type="text" name="username" id="username" class="form-control" placeholder="Username" style="border-radius: 5px; width: 240px;">
+            <input type="text" name="username" id="username" class="form-control" placeholder="Email" style="border-radius: 5px; width: 240px;">
           </div>
           <div class="input-group input-login-page">
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" style="border-radius: 5px; width: 240px;">
           </div> 
-          <br/>
+            <!-- <button type="button" id="login" class="btn btn-default btn-full-width" style="color: #fff; width:240px; margin:0px 10px; background-color: #DB357A; border-color: #DB357A; padding: 10px 12px;">Log In</button> -->
 
-            <button type="button" id="login" class="btn btn-default btn-full-width" style="color: #fff; width:240px; margin:0px 10px; background-color: #DB357A; border-color: #DB357A; padding: 10px 12px;">Log In</button>
+          <br>
+
+          <button type="button" class="btn btn-default"  id="login" style="margin: 10px; width: 100px; background-color: #DB357A; border-color: #DB357A; color: #fff;">Log In</button>
+          <button type="button" class="btn btn-default"  id="signup" style="margin: 10px; margin: 10px; width: 100px; background-color: transparent; border-color: #fff; color: #fff;">Sign Up</button>
 
         </form>
         
