programitic action buttons

--- a/show_permit.html
+++ b/show_permit.html
@@ -6,9 +6,9 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <style src="style.css"></style>
-
     <script src="parse-1.6.7.min.js"></script>
     <script src="show_permit.js"></script>
+    <script src="action.js"></script>
   </head>
 
   <body>
@@ -34,6 +34,7 @@
 
     
     <div id="received_permit">
+<!--     <button type="button" id="received_permit"  class="btn btn-default btn-full-width" style="color: white; width:340px; margin:30px 10px; background-color: #DB357A; border-color: #DB357A; padding: 10px 12px;"></button> -->
       <!-- Injected from Javascript File -->  
     </div>
 
