facebook bug fixed

--- a/give_permit.html
+++ b/give_permit.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="" style="padding-bottom: 25px;">
                   <label for="sel3" style="color: #fff;">What is your account password?</label>
-                  <input type="text" class="form-control" id="account_password" placeholder="********">
+                  <input type="password" class="form-control" id="account_password" placeholder="********">
                 </div>
                 <div class="" style="padding-bottom: 25px;">
                   <label for="sel4" style="color: #fff;">To who?</label>
