Added twitter functionality Closed #20

--- a/give_permit.html
+++ b/give_permit.html
@@ -44,6 +44,7 @@
                     <option value="2">Yale CAS</option>
                     <option value="3">Brown MCB</option>
                     <option value="4">JetBlue</option>
+                    <option value="5">Twitter</option>
                   </select>
                 </div>
                 <div class="" style="padding-bottom: 25px;">
