--- a/show_permit.html
+++ b/show_permit.html
@@ -31,7 +31,8 @@
     </div> <!-- close header -->
 
   <div class="content">
-      <div class="permits-received-container" style="margin-top: 20px;">
+      
+      <div class="permits-received-container">
         <div class="row ten-vpadding">
           <p>Permissions received from</p>
         </div>
@@ -42,8 +43,7 @@
         </div>
       </div> <!-- close permits received container -->
 
-
-    <div class="permits-sent-container">
+      <div class="permits-sent-container" style="margin-top: 20px;">
         <div class="row ten-vpadding">
           <p>Permissions sent to</p>
         </div>
